# real-world-ml-course

./: README.md
docker-compose/: redpanda.yaml
services/trade_producer/: Dockerfile  LeanDockerfile  Makefile  pyproject.toml
services/trade_producer/src/: config.py  kraken_api.py  main.py
